<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".presentation.ui.dialogs.main.DialogInfo">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/selector_rounded_corners"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_15dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_settings"
                style="@style/TextLarge"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_20dp"
                android:gravity="center"
                android:text="@string/word_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/line_top"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/txt_settings" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/word"
                android:textColor="@color/grey" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10dp"
                android:background="@drawable/spinner_border"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:selectableItemBackground"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_word"
                    style="@style/InputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:gravity="center|start"
                    android:hint="@string/word"
                    android:minHeight="?actionBarSize"
                    android:paddingHorizontal="@dimen/_10dp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/translation"
                android:textColor="@color/grey" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10dp"
                android:background="@drawable/spinner_border"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:selectableItemBackground"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_translation"
                    style="@style/InputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:gravity="center|start"
                    android:hint="@string/translation"
                    android:minHeight="?actionBarSize"
                    android:paddingHorizontal="@dimen/_10dp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/notify_at"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10dp"
                android:background="@drawable/spinner_border"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:selectableItemBackground"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/hint_notify"
                    style="@style/TextSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="?actionBarSize"
                    android:layout_marginStart="@dimen/_10dp"
                    android:layout_marginEnd="@dimen/_10dp"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:padding="0dp"
                    android:text="@string/notufy_at" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_notify"
                    style="@style/TextSmall"
                    android:layout_width="0dp"
                    android:layout_height="?actionBarSize"
                    android:layout_marginStart="@dimen/_10dp"
                    android:layout_marginEnd="@dimen/_10dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:hint="@string/none"
                    android:maxLines="1"
                    android:padding="0dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_favourite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:clickable="false"
                android:focusable="false"
                android:foreground="?android:selectableItemBackground"
                android:paddingHorizontal="@dimen/_10dp"
                android:text="@string/add_to_fav"
                android:textAppearance="@style/TextSmall"
                android:textSize="@dimen/_16sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_edit"
                    style="@style/NextButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_marginVertical="@dimen/_10dp"
                    android:layout_marginStart="@dimen/_10dp"
                    android:layout_marginEnd="@dimen/_10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/edit"
                    android:textColor="?attr/colorPrimary"
                    app:strokeColor="?attr/colorPrimary"
                    app:strokeWidth="@dimen/_1dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_delete"
                    style="@style/NextButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_marginVertical="@dimen/_10dp"
                    android:layout_marginStart="@dimen/_10dp"
                    android:layout_marginEnd="@dimen/_10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/delete"
                    android:textColor="?attr/colorPrimary"
                    app:strokeColor="?attr/colorPrimary"
                    app:strokeWidth="@dimen/_1dp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>